Fix .youtube_wrapper being too large if video isn't post-loaded

--- a/sass/_youtube.scss
+++ b/sass/_youtube.scss
@@ -1,8 +1,7 @@
 /*===YOUTUBE===*/
 .youtube_wrapper {
-  height: 0;
+  height: 40px;
   margin-bottom: 10px;
-  padding-bottom: 56.25%;
   position: relative;
 }
 
@@ -10,4 +9,9 @@
   width: 100%;
   height: 100%;
   position: absolute;
+}
+
+.youtube_wrapper--loaded {
+  height: 0;
+  padding-bottom: 56.25%;
 }
